# haas

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: client.py  hist_ir.json  make_hist_ir.json.py  start_server.sh
src/haas/: __init__.py  __main__.py  client.py  serialize.py  server.py
src/haas/protos/: hist.proto  hist_pb2.py  hist_pb2.pyi  hist_pb2_grpc.py
